--- a/package.json
+++ b/package.json
@@ -11,8 +11,9 @@
     "e2e": "node test/e2e/runner.js",
     "test": "npm run unit && npm run e2e",
     "lint": "eslint --ext .js,.vue src test/unit test/e2e/specs",
-    "build": "node build/build.js"
+    "prepare": "node build/build.js"
   },
+  "files": [ "dist/" ],
   "dependencies": {
     "@panter/vue-i18next": "^0.12.0",
     "axios": "^0.18.0",
